# Project/docs/swagger.json
@@ -158,6 +158,30 @@
                 }
             }
         },
+        "/user/hardDeleteUser": {
+            "get": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "硬删除用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "id",
+                        "name": "id",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "code\",\"message\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/user/updateUser": {
             "post": {
                 "tags": [
